--- a/Shutterbug/Base.lproj/Main_iPhone.storyboard
+++ b/Shutterbug/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3Kn-kd-bmF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="9ZJ-nt-o09">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Just Posted Flickr PhotosTVC-->
+        <!--Just Posted Flickr PhotosTVC - Shutterbug-->
         <scene sceneID="b7Y-Ml-E3r">
             <objects>
                 <tableViewController id="3Kn-kd-bmF" customClass="JustPostedFlickrPhotosTVC" sceneMemberID="viewController">
@@ -13,11 +13,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FlickrPhotoCell" textLabel="HuS-Sm-LHi" detailTextLabel="cGa-Mk-XGi" style="IBUITableViewCellStyleSubtitle" id="dGl-07-vLp">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FlickrPhotoCell" textLabel="HuS-Sm-LHi" detailTextLabel="cGa-Mk-XGi" style="IBUITableViewCellStyleSubtitle" id="dGl-07-vLp">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dGl-07-vLp" id="4bW-Af-G5U">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HuS-Sm-LHi">
@@ -36,6 +36,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="2xO-9Q-9jm" kind="push" identifier="DisplayPhoto" id="QPq-L4-iD7"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -43,8 +46,67 @@
                             <outlet property="delegate" destination="3Kn-kd-bmF" id="ga8-zk-scP"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Shutterbug" id="lDn-KE-jVp"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TN6-k3-iZv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="714" y="57"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="Yfz-MH-a6T">
+            <objects>
+                <viewController id="2xO-9Q-9jm" customClass="imageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EFh-o8-AGg"/>
+                        <viewControllerLayoutGuide type="bottom" id="dI2-6T-6Wh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OAN-Ya-s4z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zyp-yk-nAl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </scrollView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="pX8-QU-ScJ">
+                                <rect key="frame" x="141" y="266" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Zyp-yk-nAl" secondAttribute="bottom" id="CXH-b7-zyE"/>
+                            <constraint firstAttribute="trailing" secondItem="Zyp-yk-nAl" secondAttribute="trailing" id="Fbo-z6-MaR"/>
+                            <constraint firstItem="Zyp-yk-nAl" firstAttribute="leading" secondItem="OAN-Ya-s4z" secondAttribute="leading" id="JUb-v1-rgv"/>
+                            <constraint firstItem="Zyp-yk-nAl" firstAttribute="top" secondItem="OAN-Ya-s4z" secondAttribute="top" id="VSQ-Hi-mwv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zuc-v7-Ygf"/>
+                    <connections>
+                        <outlet property="scrollView" destination="Zyp-yk-nAl" id="fEn-yi-ZrI"/>
+                        <outlet property="spinner" destination="pX8-QU-ScJ" id="7zX-Rb-Nki"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z56-C1-Mrc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1145" y="57"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sd3-n2-07B">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9ZJ-nt-o09" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vhw-5k-UoG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3Kn-kd-bmF" kind="relationship" relationship="rootViewController" id="8VW-PM-KfU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hcs-og-BIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="188" y="57"/>
         </scene>
